test/asm/section-in-load.err
warning: section-in-load.asm(3): [-Wunterminated-load]
    `LOAD` block without `ENDL` terminated by `SECTION`
error: section-in-load.asm(4):
    Found `ENDL` outside of a `LOAD` block
error: Assembly aborted (1 error)!
