test/asm/section-in-load.asm
SECTION "outer", ROM0
LOAD "ram", WRAM0
SECTION "inner", ROM0
ENDL
